[gd_scene load_steps=38 format=2]

[ext_resource path="res://Levels/LevelSelect/MissionBriefing.tscn" type="PackedScene" id=1]
[ext_resource path="res://Art Packs/Planets2D/Planets-Atmosphere-pngs/planet-2.png" type="Texture" id=2]
[ext_resource path="res://Space Backgrounds/backgroundSpace_01.1.png" type="Texture" id=3]
[ext_resource path="res://Levels/LevelSelect/LevelSelect.gd" type="Script" id=4]
[ext_resource path="res://Menus/Pause Menu/Pause Menu.tscn" type="PackedScene" id=5]
[ext_resource path="res://Levels/LevelSelect/SelectablePlanet.tscn" type="PackedScene" id=6]
[ext_resource path="res://Levels/LevelSelect/MapPlayer.tscn" type="PackedScene" id=7]
[ext_resource path="res://Art Packs/Planets2D/Planets-Basic-pngs/Planet-2.png" type="Texture" id=8]
[ext_resource path="res://Art Packs/Planets2D/Planets-Atmosphere-pngs/planet-8.png" type="Texture" id=9]
[ext_resource path="res://Levels/LevelSelect/PlayerGemCount.tscn" type="PackedScene" id=10]
[ext_resource path="res://Levels/LevelSelect/UpgradeMenu.tscn" type="PackedScene" id=11]
[ext_resource path="res://Levels/LevelSelect/UpgradePlanet.tscn" type="PackedScene" id=12]
[ext_resource path="res://Art Packs/Planets2D/Planets-Basic-pngs/Planet-10.png" type="Texture" id=13]
[ext_resource path="res://Utility/M_Grayscale.tres" type="Material" id=14]
[ext_resource path="res://Levels/LevelSelect/StatsZone.tscn" type="PackedScene" id=15]
[ext_resource path="res://Levels/LevelSelect/StatsMenu.tscn" type="PackedScene" id=16]
[ext_resource path="res://Art Packs/Planets2D/Planets-Atmosphere-pngs/planet-12.png" type="Texture" id=17]
[ext_resource path="res://Art Packs/Planets2D/Planets-Atmosphere-pngs/planet-10.png" type="Texture" id=18]
[ext_resource path="res://Art Packs/Planets2D/Planets-Atmosphere-pngs/planet-7.png" type="Texture" id=19]
[ext_resource path="res://Art Packs/Planets2D/Planets-Atmosphere-pngs/planet-3.png" type="Texture" id=20]
[ext_resource path="res://Art Packs/Planets2D/Planets-Atmosphere-pngs/planet-5.png" type="Texture" id=21]
[ext_resource path="res://Art Packs/Planets2D/Planets-Atmosphere-pngs/planet-6.png" type="Texture" id=22]
[ext_resource path="res://Levels/finalBossFightShip.png" type="Texture" id=23]

[sub_resource type="CircleShape2D" id=1]
radius = 77.1044

[sub_resource type="Animation" id=2]
resource_name = "MoonOrbit"
length = 20.0
loop = true
step = 1.0
tracks/0/type = "value"
tracks/0/path = NodePath("Moon:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 10, 20 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 70, 0 ), Vector2( -70, 0 ), Vector2( 70, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Moon:z_index")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 10 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, -1 ]
}

[sub_resource type="Animation" id=3]
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("LevelPanel:rect_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 187, 0 ), Vector2( 187, 53 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("LevelPanel:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -95, -61 ), Vector2( -94.6821, -114 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("LevelPanel/BestScoreLbl:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("LevelPanel/LevelDescription:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="CircleShape2D" id=4]
radius = 33.8306

[sub_resource type="Animation" id=5]
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("LevelPanel:rect_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 187, 0 ), Vector2( 187, 53 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("LevelPanel:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -95, -61 ), Vector2( -94.6821, -114 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("LevelPanel/BestScoreLbl:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("LevelPanel/LevelDescription:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="CircleShape2D" id=6]
radius = 111.543

[sub_resource type="CircleShape2D" id=7]
radius = 50.5131

[sub_resource type="Animation" id=8]
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("LevelPanel:rect_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 187, 0 ), Vector2( 187, 53 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("LevelPanel:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -95, -61 ), Vector2( -94.6821, -114 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("LevelPanel/BestScoreLbl:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("LevelPanel/LevelDescription:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=9]
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("LevelPanel:rect_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 187, 0 ), Vector2( 187, 53 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("LevelPanel:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -95, -61 ), Vector2( -94.6821, -114 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("LevelPanel/BestScoreLbl:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("LevelPanel/LevelDescription:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=10]
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("LevelPanel:rect_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 187, 0 ), Vector2( 187, 53 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("LevelPanel:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -95, -61 ), Vector2( -94.6821, -114 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("LevelPanel/BestScoreLbl:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("LevelPanel/LevelDescription:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=11]
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("LevelPanel:rect_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 187, 0 ), Vector2( 187, 53 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("LevelPanel:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -95, -61 ), Vector2( -94.6821, -114 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("LevelPanel/BestScoreLbl:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("LevelPanel/LevelDescription:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=12]
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("LevelPanel:rect_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 187, 0 ), Vector2( 187, 53 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("LevelPanel:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -95, -61 ), Vector2( -94.6821, -114 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("LevelPanel/BestScoreLbl:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("LevelPanel/LevelDescription:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=13]
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("LevelPanel:rect_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 187, 0 ), Vector2( 187, 53 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("LevelPanel:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -95, -61 ), Vector2( -94.6821, -114 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("LevelPanel/BestScoreLbl:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("LevelPanel/LevelDescription:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=14]
resource_name = "default"
length = 20.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Node2D:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 20 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 360.0, 0.0 ]
}

[node name="Map" type="Node2D"]
script = ExtResource( 4 )

[node name="Background" type="Sprite" parent="."]
modulate = Color( 0.478431, 0.478431, 0.478431, 1 )
position = Vector2( 1006.22, -402.817 )
scale = Vector2( 2, 2 )
z_index = -10
texture = ExtResource( 3 )

[node name="Levels" type="Node2D" parent="."]

[node name="Planet" parent="Levels" instance=ExtResource( 6 )]
position = Vector2( 253.906, 414.268 )
levelDescription = "Alpha Sector"
levelName = "1"
missionName = "Learning the Ropes"
missionBriefing = "Greetings Comrade! Welcome to BASIC training.
Before we can send you out, you'll need to prove your skills. 

We have setup this basic course to get you used to the basics.

Remember, we need you to defeat the Federation, so your skills will be of the utmost importance.
Prepare for deployment...
"
unlocked = true
levelsToUnlock = [ NodePath("../Planet2") ]

[node name="CollisionShape2D" parent="Levels/Planet/SelectableArea" index="0"]
shape = SubResource( 1 )

[node name="Planet2" parent="Levels" instance=ExtResource( 6 )]
position = Vector2( 572.804, 482.603 )
levelDescription = "Beta Sector"
levelName = "2"
missionName = "A Loss of Energy	"
missionBriefing = "Incredible performance in your previous mission. Now that you're well acquainted with the capabilities of your spaceship, you will need to venture forth and carve out a path for us!

The Federation will not always use energy aligned ammunition, so make sure to seek out attacks that matched your training to generate charge to fight back! Without it, you stand no chance."
levelsToUnlock = [ NodePath("../Planet3") ]

[node name="PlanetSprite" parent="Levels/Planet2" index="0"]
scale = Vector2( 0.058, 0.058 )
texture = ExtResource( 2 )

[node name="Lock" parent="Levels/Planet2" index="5"]
scale = Vector2( 1.5, 1.5 )

[node name="Planet3" parent="Levels" instance=ExtResource( 6 )]
position = Vector2( 898.804, 105.603 )
levelDescription = "Gamma Sector"
levelName = "3"
missionName = "Revolving Troubles"
missionBriefing = "Gadzooks! The Federation has evaporated the entire surface of this planet! Ravage their fleet; destroy their blockade! Let no ship slow your hand!"
levelsToUnlock = [ NodePath("../Planet4") ]

[node name="PlanetSprite" parent="Levels/Planet3" index="0"]
scale = Vector2( 0.09, 0.09 )
texture = ExtResource( 8 )

[node name="Node2D" type="Node2D" parent="Levels/Planet3/PlanetSprite" index="0"]
rotation = 1.33518
scale = Vector2( 11.1111, 11.1111 )

[node name="Moon" type="Sprite" parent="Levels/Planet3/PlanetSprite/Node2D"]
modulate = Color( 0.392157, 0.392157, 0.392157, 1 )
material = ExtResource( 14 )
position = Vector2( 46.0615, 0 )
scale = Vector2( 0.013, 0.013 )
z_index = -1
texture = ExtResource( 13 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Levels/Planet3/PlanetSprite/Node2D"]
autoplay = "MoonOrbit"
anims/MoonOrbit = SubResource( 2 )

[node name="AnimationPlayer" parent="Levels/Planet3" index="3"]
anims/DisplayLevelInfo = SubResource( 3 )

[node name="Planet4" parent="Levels" instance=ExtResource( 6 )]
position = Vector2( 1345.14, 371.091 )
levelDescription = "Delta Sector"
levelName = "4"
missionName = "Gravity Vectors"
missionBriefing = "What have the Federation done? The entire ecosystem of this planet is now uninhabitable. The brutes. The nearby battle fleet armada must be responsible! Don't just float there, go blow them up. You must avenge the fallen."
levelsToUnlock = [ NodePath("../Planet5") ]

[node name="PlanetSprite" parent="Levels/Planet4" index="0"]
scale = Vector2( 0.03, 0.03 )
texture = ExtResource( 9 )

[node name="CollisionShape2D" parent="Levels/Planet4/SelectableArea" index="0"]
shape = SubResource( 4 )

[node name="AnimationPlayer" parent="Levels/Planet4" index="3"]
anims/DisplayLevelInfo = SubResource( 5 )

[node name="CollisionShape2D" parent="Levels/Planet4/DisplayArea2D" index="0"]
shape = SubResource( 6 )

[node name="Lock" parent="Levels/Planet4" index="5"]
scale = Vector2( 1, 1 )

[node name="Planet5" parent="Levels" instance=ExtResource( 6 )]
position = Vector2( 1793.88, 62.4397 )
levelDescription = "Epsilon Sector"
levelName = "5"
missionName = "Orthogonal Flyby"
missionBriefing = "Great work, your flying has lead to numerous victories now. Your next mission will be far more dangerous. A Titan class Destroyer is in the area. It is supported by two assault batteries, impervious to  your attacks.

God speed.

P.S. Do you have cremation preferences?"
levelsToUnlock = [ NodePath("../Planet6") ]

[node name="PlanetSprite" parent="Levels/Planet5" index="0"]
scale = Vector2( 0.09, 0.09 )
texture = ExtResource( 17 )

[node name="CollisionShape2D" parent="Levels/Planet5/SelectableArea" index="0"]
shape = SubResource( 7 )

[node name="AnimationPlayer" parent="Levels/Planet5" index="3"]
anims/DisplayLevelInfo = SubResource( 8 )

[node name="CollisionShape2D" parent="Levels/Planet5/DisplayArea2D" index="0"]
shape = SubResource( 6 )

[node name="Planet6" parent="Levels" instance=ExtResource( 6 )]
position = Vector2( 1427.88, -275.56 )
levelDescription = "Zeta Sector"
levelName = "6"
missionName = "Asteroid Defense"
missionBriefing = "You've bested the Titan? Incredible, I am thoroughly impressed. However, don't get too proud yet. We're rendevouzing with other parts of the fleet in the Mu sector.

We're going to be taking a shortcut through an asteroid field. There will be no opportunity to re-energize your vessal, so spend your energy carefully."
levelsToUnlock = [ NodePath("../Planet7") ]

[node name="PlanetSprite" parent="Levels/Planet6" index="0"]
scale = Vector2( 0.09, 0.09 )
texture = ExtResource( 18 )

[node name="CollisionShape2D" parent="Levels/Planet6/SelectableArea" index="0"]
shape = SubResource( 7 )

[node name="AnimationPlayer" parent="Levels/Planet6" index="3"]
anims/DisplayLevelInfo = SubResource( 9 )

[node name="CollisionShape2D" parent="Levels/Planet6/DisplayArea2D" index="0"]
shape = SubResource( 6 )

[node name="Planet7" parent="Levels" instance=ExtResource( 6 )]
position = Vector2( 880.998, -358.716 )
levelDescription = "Mu Sector"
levelName = "7"
missionName = "The Bouncer"
missionBriefing = "You survived the jump!? That asteroid by-pass was rated as odds of survival of one in a million! Your flight skills are unsurmounted! You truly are our greatest pilot! If so, then you are finally worthy.

I've been speaking with Upper Management since we've arrived, and it's been decided that only you'll be able to bypass this Federation system's space defenses. They're using experimental space-wrapping weapons, so watch out for unusual movement!"
levelsToUnlock = [ NodePath("../Planet8") ]

[node name="PlanetSprite" parent="Levels/Planet7" index="0"]
scale = Vector2( 0.045, 0.045 )
texture = ExtResource( 19 )

[node name="CollisionShape2D" parent="Levels/Planet7/SelectableArea" index="0"]
shape = SubResource( 7 )

[node name="AnimationPlayer" parent="Levels/Planet7" index="3"]
anims/DisplayLevelInfo = SubResource( 10 )

[node name="CollisionShape2D" parent="Levels/Planet7/DisplayArea2D" index="0"]
shape = SubResource( 6 )

[node name="Lock" parent="Levels/Planet7" index="5"]
scale = Vector2( 1, 1 )

[node name="Planet8" parent="Levels" instance=ExtResource( 6 )]
position = Vector2( 415.024, -781.239 )
levelDescription = "Omicron Sector"
levelName = "8"
missionName = "Hot Blooded"
missionBriefing = "We're beginning to make our way into the heart of Federation controlled territory now. Their fleets will become far more aggressive and dangerous from here on out. "
levelsToUnlock = [ NodePath("../Planet9") ]

[node name="PlanetSprite" parent="Levels/Planet8" index="0"]
scale = Vector2( 0.045, 0.045 )
texture = ExtResource( 20 )

[node name="CollisionShape2D" parent="Levels/Planet8/SelectableArea" index="0"]
shape = SubResource( 7 )

[node name="AnimationPlayer" parent="Levels/Planet8" index="3"]
anims/DisplayLevelInfo = SubResource( 11 )

[node name="CollisionShape2D" parent="Levels/Planet8/DisplayArea2D" index="0"]
shape = SubResource( 6 )

[node name="Lock" parent="Levels/Planet8" index="5"]
scale = Vector2( 1, 1 )

[node name="Planet9" parent="Levels" instance=ExtResource( 6 )]
position = Vector2( 1023.83, -1157.96 )
levelDescription = "Upsilon Sector"
levelName = "9"
missionName = "Penultimate"
missionBriefing = "We need you to infiltrate the local star's defense system and recover a data disk. The Lightstar Fortress is equipped with plasma cannons and countless armaments. You will need to bypass the defenses without destroying any to avoid alerting additional reinforcements of your position before we're able to recover the data. Once inside, our tech team will hack into the system's intranet and recover the location of the Federation's command center, the location of your final and most important mission."
levelsToUnlock = [ NodePath("../Planet10") ]

[node name="PlanetSprite" parent="Levels/Planet9" index="0"]
scale = Vector2( 0.045, 0.045 )
texture = ExtResource( 21 )

[node name="CollisionShape2D" parent="Levels/Planet9/SelectableArea" index="0"]
shape = SubResource( 7 )

[node name="AnimationPlayer" parent="Levels/Planet9" index="3"]
anims/DisplayLevelInfo = SubResource( 12 )

[node name="CollisionShape2D" parent="Levels/Planet9/DisplayArea2D" index="0"]
shape = SubResource( 6 )

[node name="Lock" parent="Levels/Planet9" index="5"]
scale = Vector2( 1, 1 )

[node name="Planet10" parent="Levels" instance=ExtResource( 6 )]
position = Vector2( 1617.51, -1164.69 )
levelDescription = "Omega Sector"
levelName = "10"
missionName = "The Truth"
missionBriefing = "I can't believe it, but we have the potential to finally defeat the Federation here, once and for all. The final frontier is upon you. The Command Centre of the Federation should be around these coordinates. Destroy it.

Should you emerge victorious here, you will change the fate of our galaxy, forever."

[node name="PlanetSprite" parent="Levels/Planet10" index="0"]
scale = Vector2( 0.045, 0.045 )
texture = ExtResource( 22 )

[node name="CollisionShape2D" parent="Levels/Planet10/SelectableArea" index="0"]
shape = SubResource( 7 )

[node name="AnimationPlayer" parent="Levels/Planet10" index="3"]
anims/DisplayLevelInfo = SubResource( 13 )

[node name="CollisionShape2D" parent="Levels/Planet10/DisplayArea2D" index="0"]
shape = SubResource( 6 )

[node name="Lock" parent="Levels/Planet10" index="5"]
scale = Vector2( 1, 1 )

[node name="Node2D" type="Node2D" parent="Levels/Planet10"]

[node name="finalBossFightShip" type="Sprite" parent="Levels/Planet10/Node2D"]
position = Vector2( 7.00293, 35.0078 )
rotation = 6.28319
scale = Vector2( 0.118504, 0.118504 )
texture = ExtResource( 23 )

[node name="AnimationPlayerIdle" type="AnimationPlayer" parent="Levels/Planet10"]
autoplay = "default"
anims/default = SubResource( 14 )

[node name="UpgradePlanet" parent="." instance=ExtResource( 12 )]

[node name="StatsZone" parent="." instance=ExtResource( 15 )]
position = Vector2( 119.055, -182.551 )

[node name="MapPlayer" parent="." groups=[
"Persist",
] instance=ExtResource( 7 )]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MissionBriefing" parent="CanvasLayer" instance=ExtResource( 1 )]

[node name="PlayerGemCount" parent="CanvasLayer" instance=ExtResource( 10 )]

[node name="UpgradeMenu" parent="CanvasLayer" instance=ExtResource( 11 )]

[node name="StatsMenu" parent="CanvasLayer" instance=ExtResource( 16 )]
margin_right = 1025.0
margin_bottom = 601.0
levels = NodePath("../../Levels")

[node name="Pause Menu" parent="CanvasLayer" instance=ExtResource( 5 )]
visible = false
margin_left = 230.0
margin_top = 66.0
margin_right = -256.0
margin_bottom = -69.0

[connection signal="playerNearby" from="UpgradePlanet" to="." method="_on_UpgradePlanet_playerNearby"]
[connection signal="playerNearby" from="StatsZone" to="." method="_on_StatsZone_playerNearby"]
[connection signal="cancel" from="CanvasLayer/MissionBriefing" to="." method="_on_MissionBriefing_cancel"]
[connection signal="deploy" from="CanvasLayer/MissionBriefing" to="." method="_on_MissionBriefing_deploy"]
[connection signal="shopClosed" from="CanvasLayer/UpgradeMenu" to="." method="_on_UpgradeMenu_shopClosed"]
[connection signal="statsClosed" from="CanvasLayer/StatsMenu" to="." method="_on_StatsMenu_statsClosed"]

[editable path="Levels/Planet"]
[editable path="Levels/Planet2"]
[editable path="Levels/Planet3"]
[editable path="Levels/Planet4"]
[editable path="Levels/Planet5"]
[editable path="Levels/Planet6"]
[editable path="Levels/Planet7"]
[editable path="Levels/Planet8"]
[editable path="Levels/Planet9"]
[editable path="Levels/Planet10"]
